There are 2 major parts ing QueryBuilder(ViewBrowser):
1. A Parser that build the backbone, QueryModel, a similar to AST.
2. A JTree manager to load/reload the DefaultTreeModel