@@ -1,17 +1,17 @@
 /*
  * SQLeonardo :: java database frontend
  * Copyright (C) 2004 nickyb@users.sourceforge.net
- * 
+ *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
  * as published by the Free Software Foundation; either version 2
  * of the License, or (at your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
@@ -41,8 +41,14 @@ import com.sqleo.querybuilder.QueryBuilder;
 import com.sqleo.querybuilder.QueryModel;
 
 
-public class SQLParser
-{
+/**
+ * Parse stream or string into {@link QueryModel}.
+ *
+ * @author ody
+ *
+ */
+public class SQLParser {
+	/** Map of CTE */
 	private static Hashtable cte;
 	private static Boolean DisplayMsg = true;
 	private static HashMap<QuerySpecification,List<EntityExtra>> extrasMap = new HashMap();
@@ -67,27 +73,24 @@ public class SQLParser
 		return toQueryModel(new StringReader(sql));
 	}
 
-	private static QueryModel toQueryModel(Reader r)
-		throws IOException
-	{
+	private static QueryModel toQueryModel(Reader r) throws IOException {
 		QueryModel qm = new QueryModel();
-		
-		ArrayList al = doTokenize(r);
+
+		ArrayList<Object> al = doTokenize(r);
 		doAdjustSequence(al);
-		
-		ListIterator li = al.listIterator();
-		doParseQuery(li,qm.getQueryExpression());
-		
+
+		ListIterator<Object> li = al.listIterator();
+		doParseQuery(li, qm.getQueryExpression());
+
 		if(li.hasNext() && li.next().toString().toUpperCase().equalsIgnoreCase(_ReservedWords.ORDER_BY))
 			doParseOrderBy(li,qm);
 
-		if(li.hasNext() && li.next().toString().equalsIgnoreCase(_ReservedWords.LIMIT))
-		{
-				Application.alert("LIMIT: syntax not supported yet");
+		if(li.hasNext() && li.next().toString().equalsIgnoreCase(_ReservedWords.LIMIT)) {
+			Application.alert("LIMIT: syntax not supported yet");
 		}
-		
-		final HashMap extrasArrayMap = new HashMap(); 
-		for(Entry<QuerySpecification, List<EntityExtra>> entry : extrasMap.entrySet()){
+
+		final HashMap<QuerySpecification, EntityExtra[]> extrasArrayMap = new HashMap<QuerySpecification, EntityExtra[]>();
+		for(Entry<QuerySpecification, List<EntityExtra>> entry : extrasMap.entrySet()) {
 			final List<EntityExtra> vals = entry.getValue();
 			final EntityExtra[] valsArray = (EntityExtra[]) vals.toArray(new EntityExtra[vals.size()]);
 			extrasArrayMap.put(entry.getKey(), valsArray);
@@ -96,173 +99,155 @@ public class SQLParser
 		return qm;
 	}
 
-	private static void doParseQuery(ListIterator li, QueryExpression qe)
-		throws IOException
-	{
+	private static void doParseQuery(ListIterator<Object> li, QueryExpression qe)
+		throws IOException {
 
-		while(li.hasNext())
-		{
+		while(li.hasNext()) {
 			Object next = li.next();
 
-			if(next.toString().equalsIgnoreCase(_ReservedWords.WITH))
-			{
-				doParseCTE(li,qe.getQuerySpecification());
+			if(next.toString().equalsIgnoreCase(_ReservedWords.WITH)) {
+				doParseCTE(li, qe.getQuerySpecification());
 			}
-			else if(next.toString().equalsIgnoreCase(_ReservedWords.UPDATE))
-			{
-				doParseFrom(li,qe.getQuerySpecification());
+			else if(next.toString().equalsIgnoreCase(_ReservedWords.UPDATE)) {
+				doParseFrom(li, qe.getQuerySpecification());
 			}
-			else if(next.toString().equalsIgnoreCase(_ReservedWords.SET))
-			{
-				doParseSelect(li,qe.getQuerySpecification());
+			else if(next.toString().equalsIgnoreCase(_ReservedWords.SET)) {
+				doParseSelect(li, qe.getQuerySpecification());
 				doConvertColumns(qe.getQuerySpecification());
 			}
-			else if(next.toString().equalsIgnoreCase(_ReservedWords.SELECT))
-			{
-				doParseSelect(li,qe.getQuerySpecification());
+			else if(next.toString().equalsIgnoreCase(_ReservedWords.SELECT)) {
+				doParseSelect(li, qe.getQuerySpecification());
 			}
-			else if(next.toString().equalsIgnoreCase(_ReservedWords.FROM))
-			{
-				doParseFrom(li,qe.getQuerySpecification());
+			else if(next.toString().equalsIgnoreCase(_ReservedWords.FROM)) {
+				doParseFrom(li, qe.getQuerySpecification());
 				doConvertColumns(qe.getQuerySpecification());
 			}
-			else if(next.toString().equalsIgnoreCase(_ReservedWords.WHERE))
-			{
+			else if(next.toString().equalsIgnoreCase(_ReservedWords.WHERE)) {
 				QueryTokens.Condition[] tokens = doParseConditions(li);
-				//#ticket142- join values are converted into where clause before, so prefix first token by and if exists 
+				//#ticket142- join values are converted into where clause before, so prefix first token by and if exists
 				final boolean alreadyWhereClauseExists = qe.getQuerySpecification().getWhereClause().length>0;
-				for(int i=0; i<tokens.length; i++){
-					if(i==0 && alreadyWhereClauseExists){
+				for(int i = 0; i < tokens.length; i++){
+					if(i == 0 && alreadyWhereClauseExists){
 						tokens[i].setAppend(_ReservedWords.AND);
 					}
 					qe.getQuerySpecification().addWhereClause(tokens[i]);
 				}
 			}
-			else if(next.toString().equalsIgnoreCase(_ReservedWords.GROUP_BY))
-			{
-				doParseGroupBy(li,qe.getQuerySpecification());
+			else if(next.toString().equalsIgnoreCase(_ReservedWords.GROUP_BY)) {
+				doParseGroupBy(li, qe.getQuerySpecification());
 			}
-			else if(next.toString().equalsIgnoreCase(_ReservedWords.HAVING))
-			{
+			else if(next.toString().equalsIgnoreCase(_ReservedWords.HAVING)) {
 				QueryTokens.Condition[] tokens = doParseConditions(li);
-				for(int i=0; i<tokens.length; i++)
+				for(int i = 0; i < tokens.length; i++)
 					qe.getQuerySpecification().addHavingClause(tokens[i]);
 			}
-			else if(next.toString().equalsIgnoreCase(_ReservedWords.UNION))
-			{
+			else if(next.toString().equalsIgnoreCase(_ReservedWords.UNION)) {
 				// ticket #91: Warning when UNION ALL is transformed in UNION
 				next = li.next();
-				if(next.toString().equalsIgnoreCase(_ReservedWords.ALL))
-				{
+				if(next.toString().equalsIgnoreCase(_ReservedWords.ALL)) {
 					Application.alert("!!! UNION ALL changed in UNION syntax !!!");
-
 				}
-				else
-				{
+				else {
 					li.previous();
 				}
 				QueryExpression union = new QueryExpression();
-				doParseQuery(li,union);
+				doParseQuery(li, union);
 				qe.setUnion(union);
 			}
-			else if(next.toString().equalsIgnoreCase(_ReservedWords.ORDER_BY))
-			{
+			else if(next.toString().equalsIgnoreCase(_ReservedWords.ORDER_BY)) {
 				li.previous();
 				break;
 			}
-			else if(next.toString().equalsIgnoreCase(_ReservedWords.LIMIT))
-			{
+			else if(next.toString().equalsIgnoreCase(_ReservedWords.LIMIT)) {
 				Application.alert("LIMIT: syntax not supported yet");
 				break;
 			}
-			else if(next.toString().equals(")"))
-			{
+			else if(next.toString().equals(")")) {
 				li.previous(); // ticket #80
 				break;
 			}
 		}
 	}
-	
 
-	private static void doParseCTE(ListIterator li, QuerySpecification qs)
-		throws IOException
-	{
+
+	/**Parse tokens in li into {@link #cte}.
+	 * @param li
+	 * @param qs
+	 * @throws IOException
+	 */
+	private static void doParseCTE(ListIterator<Object> li, QuerySpecification qs)
+		throws IOException {
 		String alias = null;
 		DerivedTable dt = null;
-		cte = new Hashtable(); 
+		cte = new Hashtable<String, DerivedTable>();
 
-		while(li.hasNext())
-		{
+		while(li.hasNext()) {
 			Object next = li.next();
-			
-			if(next.toString().equalsIgnoreCase(_ReservedWords.SELECT))
-			{
+
+			if(next.toString().equalsIgnoreCase(_ReservedWords.SELECT)) {
 				li.previous();
-				if(alias!=null)
-				{
+				if(alias!=null) {
 					dt = new DerivedTable();
 					doParseQuery(li,dt);
 					dt.setAlias(alias);
 					cte.put(SQLFormatter.stripQuote(dt.getAlias()),dt);
-					alias=null;
+					alias = null;
 				}
-				else
-				{
+				else {
 					// let doParseQuery do the work
 					break;
 				}
 			}
-			else if(next.toString().equalsIgnoreCase("(") || next.toString().equalsIgnoreCase(")") || next.toString().equalsIgnoreCase(",") || next.toString().equalsIgnoreCase("AS"))
-			{
+			else if(next.toString().equalsIgnoreCase("(") || next.toString().equalsIgnoreCase(")")
+				 || next.toString().equalsIgnoreCase(",") || next.toString().equalsIgnoreCase("AS")) {
 				// do nothing
 			}
-			else
-			{
-				alias=next.toString();
+			else {
+				alias = next.toString();
 			}
 		}
-				
 	}
 
-
-	private static void doParseSelect(ListIterator li, QuerySpecification qs)
-		throws IOException
-	{
+	/**Parse through the entire select clause.
+	 * @param li
+	 * @param qs
+	 * @throws IOException
+	 */
+	private static void doParseSelect(ListIterator<Object> li, QuerySpecification qs)
+		throws IOException {
 		int surrounds = 0;
 		String alias = null;
 		String value = new String();
-		SubQuery sub=null;
+		SubQuery sub = null;
 		boolean seenSubquery = false;
-		
-		while(li.hasNext())
-		{
+
+		while(li.hasNext()) {
 			Object next = li.next();
-			
-			boolean isOpenBracket = next.toString().equals("(") 
+
+			boolean isOpenBracket = next.toString().equals("(")
 					|| next.toString().equalsIgnoreCase("case"); // ticket # 72
-			boolean isClosedBracket = next.toString().equals(")") 
+			boolean isClosedBracket = next.toString().equals(")")
 					|| next.toString().equalsIgnoreCase("end"); // ticket # 72
-			
-			if(next.toString().equalsIgnoreCase(_ReservedWords.DISTINCT) && surrounds == 0 )
-			{
+
+			if(next.toString().equalsIgnoreCase(_ReservedWords.DISTINCT) && surrounds == 0 ) {
 				qs.setQuantifier(QuerySpecification.DISTINCT);
 			}
-			else if(next.toString().equals(",") && surrounds == 0 
-				|| next.toString().equals("=") && surrounds == 0) // replace "=" by "," in UPDATE SET part
-			{
-				if(!value.trim().equals("")) qs.addSelectList(new QueryTokens.DefaultExpression(value.trim(),alias));
+			else if(next.toString().equals(",") && surrounds == 0
+				|| next.toString().equals("=") && surrounds == 0) { // replace "=" by "," in UPDATE SET part
+
+				if(!value.trim().equals(""))
+					qs.addSelectList(new QueryTokens.DefaultExpression(value.trim(), alias));
+
 				value = new String();
 				alias = null; // added to fix bug #13
 				seenSubquery = false;
 			}
-			else if(next.toString().equalsIgnoreCase(_ReservedWords.ORDER_BY) )
-			{
-				// ticket #102: Specific for Oracle syntax 
+			else if(next.toString().equalsIgnoreCase(_ReservedWords.ORDER_BY) ) {
+				// ticket #102: Specific for Oracle syntax
 				// ROW_NUMBER() OVER (PARTITION BY ... ORDER BY ... ASC) as Y
 				value = value + " Order by";
 			}
-			else if(isClauseWord(next.toString()))
-			{
+			else if(isClauseWord(next.toString())) {
 				li.previous();
 				// for scalar subqueries
 				//if(next.toString().equalsIgnoreCase(_ReservedWords.WITH))
@@ -275,66 +260,58 @@ public class SQLParser
 					//value = new String();
 
 				//}
-				if(next.toString().equalsIgnoreCase(_ReservedWords.SELECT))
-				{
+				if(next.toString().equalsIgnoreCase(_ReservedWords.SELECT)) {
 					sub = new SubQuery();
-					doParseQuery(li,sub);
+					doParseQuery(li, sub);
 
 					qs.addSelectList(sub);
 					value = new String();
-
 				}
-				else 
-				{
-					if(!value.trim().equals("")) qs.addSelectList(new QueryTokens.DefaultExpression(value.trim(),alias));
+				else {
+					if(!value.trim().equals(""))
+						qs.addSelectList(new QueryTokens.DefaultExpression(value.trim(), alias));
 					break;
 				}
 			}
-			else if(isClosedBracket && value.trim().equals("")) // for last ")" after subquery
-			{
+			else if(isClosedBracket && value.trim().equals("")) { // for last ")" after subquery
 				surrounds--;
 				seenSubquery = true;
 			}
-			// ticket #87 for cast (x as ...) 
+			// ticket #87 for cast (x as ...)
 			// else if(next.toString().equalsIgnoreCase("AS") && li.hasNext())
-			else if(next.toString().equalsIgnoreCase("AS") && li.hasNext() && surrounds == 0)
-			{
+			else if(next.toString().equalsIgnoreCase("AS") && li.hasNext() && surrounds == 0) {
 				alias = li.next().toString().trim();
 				if (seenSubquery && sub!=null) {sub.setAlias(alias); sub.setAs(true);}
 			}
-			else if(value.trim().endsWith(")") && surrounds == 0 && next instanceof String){
+			else if(value.trim().endsWith(")") && surrounds == 0 && next instanceof String) {
 				//ticket 144 column alias without AS Example:  f(field) x === f(field) as x
 				alias = next.toString().trim();
 			}
-			else if(next.toString().equals("_EXTRACT_FROM_"))
-			{
+			else if(next.toString().equals("_EXTRACT_FROM_")) {
 				value = value + " FROM";
 			}
-			else
-			{
+			else {
 				if(isClosedBracket) surrounds--;
 				if(isOpenBracket) surrounds++;
-				
+
 				if(value.length()>0)
-					if(next instanceof String || next instanceof Character || next instanceof Integer)
-				{
-					// ticket #54
-					// char last = value.charAt(value.length()-1);
-					// if(Character.isLetter(last) || String.valueOf(last).equals(QueryBuilder.identifierQuoteString))
-					if(!next.toString().equals("(") && !next.toString().equals("|"))
-						value = value + SQLFormatter.SPACE;
-				}
+					if(next instanceof String || next instanceof Character || next instanceof Integer) {
+						// ticket #54
+						// char last = value.charAt(value.length()-1);
+						// if(Character.isLetter(last) || String.valueOf(last).equals(QueryBuilder.identifierQuoteString))
+						if(!next.toString().equals("(") && !next.toString().equals("|"))
+							value = value + SQLFormatter.SPACE;
+					}
+
 				value = value + next.toString().trim();
-				
+
 				 // [MSE] Sometimes the token stream returns not comma in a single token, it returns
 	            // a value with an appended comma. This is the fix for this case.
-	            if (value.endsWith(",") && surrounds == 0)
-	            {
+	            if (value.endsWith(",") && surrounds == 0) {
 	            	qs.addSelectList(new QueryTokens.DefaultExpression(value.substring(0,value.length()-1)));
 	            	value = new String();
 	            }
-	            if (seenSubquery && !value.equals(""))
-	            {
+	            if (seenSubquery && !value.equals("")) {
 	            	if(sub!=null){
 		            	sub.setAlias(value);
 		            	sub.setAs(false);
@@ -350,11 +327,11 @@ public class SQLParser
 	{
 		int surrounds = 0;
 		String value = new String();
-		
+
 		while(li.hasNext())
 		{
 			Object next = li.next();
-			
+
 			if(next.toString().equals(",") && surrounds == 0 || next.toString().equals(";"))
 			{
 				qs.addGroupByClause(new QueryTokens.Group(value.trim()));
@@ -382,7 +359,7 @@ public class SQLParser
 			{
 				if(next.toString().equals("(")) surrounds++;
 				if(next.toString().equals(")")) surrounds--;
-				
+
 				if(value.length()>0 && next instanceof String)
 				{
 					char last = value.charAt(value.length()-1);
@@ -394,10 +371,8 @@ public class SQLParser
 		}
 	}
 
-
 	private static void doParseOrderBy(ListIterator li, QueryModel qm)
-	throws IOException
-	{
+			throws IOException {
 		int surrounds = 0;
 		boolean isDescendingPrevious = false;
 		String value = new String();
@@ -453,7 +428,6 @@ public class SQLParser
 		}
 	}
 
-
 	private static void doParseFrom(ListIterator li, QuerySpecification qs)
 		throws IOException
 	{
@@ -461,11 +435,11 @@ public class SQLParser
 		QueryTokens.Table t = null;
 		DerivedTable dt = null;
 		Hashtable tables = new Hashtable();
-		
+
 		for(int surrounds = 0; li.hasNext();)
 		{
 			String next = li.next().toString();
-			// ticket #80 Derived tables 
+			// ticket #80 Derived tables
 			// ticket #135 add CTE support in derived tables
 			if(next.toString().equalsIgnoreCase(_ReservedWords.SELECT)||next.toString().equalsIgnoreCase(_ReservedWords.WITH))
 			{
@@ -473,22 +447,22 @@ public class SQLParser
 				dt = new DerivedTable();
 				li.previous();
 				doParseQuery(li,dt);
-				qs.addFromClause(dt);		
+				qs.addFromClause(dt);
 			}
 			// end #80
 			else if(isClauseWord(next) || next.equals(";") || next.toString().equalsIgnoreCase(_ReservedWords.SET) )
 			{
 //				System.out.println("end.");
-				
+
 				if(t!=null) qs.addFromClause(t);
-				
+
 				li.previous();
 				break;
 			}
 			else if(next.equals(","))
 			{
 //				System.out.println("cross");
-				
+
 				if(t!=null) qs.addFromClause(t);
 				t=null;
 				dt=null;
@@ -497,7 +471,7 @@ public class SQLParser
 			{
 //				System.out.println("join");
 
-				if(t!=null) 
+				if(t!=null)
 				{
 					tables.put(SQLFormatter.stripQuote(t.getReference()),t);
 					t=null;
@@ -508,7 +482,7 @@ public class SQLParser
 					tables.put(SQLFormatter.stripQuote(dt.getAlias()),dt);
 					dt=null;
 				}
-				
+
 				joinType = QueryTokens.Join.getTypeInt(next);
 			}
 			else if(next.toString().equalsIgnoreCase(_ReservedWords.ON)
@@ -519,13 +493,13 @@ public class SQLParser
 
 				if(t!=null) tables.put(SQLFormatter.stripQuote(t.getReference()),t);
 				t=null;
-				
+
 				if(dt!=null) // #80
 				{
 					tables.put(SQLFormatter.stripQuote(dt.getAlias()),dt);
 					dt=null;
 				}
-				
+
 				/* is AND/OR, then use previous/last type */
 				if(joinType == -1)
 				{
@@ -533,7 +507,7 @@ public class SQLParser
 					if(ref.length>0 && ref[ref.length-1] instanceof QueryTokens.Join)
 						joinType = ((QueryTokens.Join)ref[ref.length-1]).getType();
 				}
-				
+
 				String left = li.next().toString();
 				while(left.equals("("))
 				{
@@ -577,7 +551,7 @@ public class SQLParser
 						}
 						right = right +temp; //(1,2,3)
 					}else if(op.equalsIgnoreCase(_ReservedWords.BETWEEN)){
-						// ta.y between 1 and 2 
+						// ta.y between 1 and 2
 						for(int i=1;i<=2;i++){
 							String temp = li.next().toString();
 							right = right + SQLFormatter.SPACE +temp;
@@ -608,7 +582,7 @@ public class SQLParser
 						}
 					}
 				}
-				
+
 				QueryTokens.Column tcl = null;
 				QueryTokens.Column tcr = null;
 				boolean addToFromClause = true;
@@ -636,9 +610,9 @@ public class SQLParser
 							tr.setAlias(sub.getAlias());
 						}
 					}
-					// fix #92 
+					// fix #92
 					else
-					{	
+					{
 						// let contaisKey case sensitive but raise exception if Alias or Table not found
 						// to do raise exception
 						if(dot!=-1){
@@ -654,7 +628,7 @@ public class SQLParser
 							tcr = new QueryTokens.Column(tr,rightFunctionName!=null ? rightFunctionName : e.substring(dot+1));
 					}
 					if(dot == -1){
-/* to do 
+/* to do
 	#377 Designer: reverse query with ON condition with values is wrong
  this test is not correct for handling
 
@@ -709,8 +683,8 @@ and
 						Application.alert("!!! WARNING conditions on join are converted into where clause( " + conditionToken + " )!!!");
 					}
 				}
-		 		if(addToFromClause){		
-		 			
+		 		if(addToFromClause){
+
 		 			final int leftIndex = getTableIndexInFromClause(qs,tcl.getTable(),false);
 		 			if(leftIndex!=-1){
 		 				qs.removeFromClause(leftIndex);
@@ -719,13 +693,13 @@ and
 		 			if(rightIndex!=-1){
 		 				qs.removeFromClause(rightIndex);
 		 			}
-		 			
+
 		 			final QueryTokens.Join joinToken = new QueryTokens.Join(joinType,tcl,op,tcr);
 		 			if(!next.toString().equalsIgnoreCase(_ReservedWords.ON)){
 		 				joinToken.getCondition().setAppend(next.toUpperCase());
 		 			}
 					qs.addFromClause(joinToken);
-		 				
+
 		 		}
 				joinType = -1;
 			}
@@ -737,9 +711,9 @@ and
 			{
 				// <bug=1914170>
 				if(t!=null) qs.addFromClause(t);
-				t=null;				
+				t=null;
 				// </bug>
-				
+
 				if(--surrounds < 0)
 				{
 					li.previous();
@@ -762,28 +736,28 @@ and
 
 				String schema = null;
 				String name = SQLFormatter.stripQuote(next.toString());
-					
+
 				int i = name.lastIndexOf(SQLFormatter.DOT);
 				if(i>0) {schema = name.substring(0,i); name = name.substring(i+1); }
 
 				if(dt==null) // added for #80
 				{
-					if(t==null) 
+					if(t==null)
 						// CTE fix #99, make cte visible from there
 						 if (cte !=null && cte.containsKey(next.toString()))
 							qs.addFromClause((DerivedTable)cte.get(next.toString()));
 						 else
 							t = new QueryTokens.Table(schema,name);
 					else
-							t.setAlias(next.toString()); 
+							t.setAlias(next.toString());
 				}
 				else
-					dt.setAlias(next.toString()); 
-				
+					dt.setAlias(next.toString());
+
 			}
 		}
 	}
-	
+
 	private static int getTableIndexInFromClause(
 			final QuerySpecification qs, final QueryTokens.Table tableRef,final boolean checkJoins) {
 		for(int i=0; i < qs.getFromClause().length; i++){
@@ -815,33 +789,32 @@ and
 	}
 
 	private static QueryTokens.Condition[] doParseConditions(ListIterator li)
-		throws IOException
-	{
+		throws IOException {
 		boolean between = false;
 		ArrayList tokens = new ArrayList();
 		QueryTokens.Condition token = null;
 		QueryTokens._Expression expr = null;
-		
+
 		for(int surrounds = 0; li.hasNext();)
 		{
 			Object next = li.next();
-			
+
 			if(next.toString().equals("(")) surrounds++;
 			if(next.toString().equals(")")) surrounds--;
-			
+
 			if(next.toString().equalsIgnoreCase("EXISTS") || next.toString().equalsIgnoreCase("NOT EXISTS"))
 			{
 				if(token == null) token = new QueryTokens.Condition(); // Added for ticket #93
 
 				SubQuery sub = new SubQuery();
 				doParseQuery(li,sub);
-				
+
 				token.setLeft(null);
 				token.setOperator(next.toString().toUpperCase());
 				token.setRight(sub);
-				
+
 				tokens.add(token);
-				
+
 				token = null;
 				expr = null;
 
@@ -856,7 +829,7 @@ and
 				{
 					expr = new SubQuery();
 					doParseQuery(li,(SubQuery)expr);
-					
+
 					// bug reverse IN (subquery)
 					token.setRight(expr);
 					tokens.add(token);
@@ -877,10 +850,10 @@ and
 			else if(isOperator(next.toString()))
 			{
 				if(token == null) token = new QueryTokens.Condition();
-				
+
 				token.setLeft(expr);
 				token.setOperator(next.toString().toUpperCase());
-				
+
 				between = token.getOperator().indexOf(_ReservedWords.BETWEEN) != -1;
 				expr = null;
 			}
@@ -893,24 +866,24 @@ and
 					token.setRight(expr);
 					tokens.add(token);
 				}
-				
+
 				token = new QueryTokens.Condition();
 				token.setAppend(next.toString());
-				
+
 				expr = null;
 			}
 			// ticket #73 oracle (+) join support
 			else if(next.toString().equals("_ORACLE_OUTER_JOIN_"))
 			{
 				// to do Change JOIN TYPE !
-				// raise exception 
+				// raise exception
 				Application.alert("!!!" + expr + "(+) changed to INNER join !!!");
 			}
 			// end #73
 			else
 			{
 				String value = expr == null ? new String() : expr.toString();
-				
+
 				if(value.length()>0 && (next instanceof String || next instanceof Number))
 				{
 					char last = value.charAt(value.length()-1);
@@ -925,25 +898,25 @@ and
 					value = value + next.toString();
 				}
 				expr = new QueryTokens.DefaultExpression(value);
-				
+
 				if(between && next.toString().equalsIgnoreCase(_ReservedWords.AND)) between = false;
 			}
-			
+
 			if(surrounds < 0)
 			{
 				li.previous();
 				break;
 			}
 		}
-		
+
 		return (QueryTokens.Condition[])tokens.toArray(new QueryTokens.Condition[tokens.size()]);
 	}
-	
+
 	private static void doConvertColumns(QuerySpecification qs)
 		throws IOException
 	{
 		Hashtable tables = new Hashtable();
-		
+
 		QueryTokens._TableReference[] fromClause = qs.getFromClause();
 		for(int i=0; i<fromClause.length; i++)
 		{
@@ -969,22 +942,22 @@ and
 			if(c!=null)
 			{
 				qs.removeSelectList(selectList[i]);
-				qs.addSelectList(c);				
+				qs.addSelectList(c);
 			}
 			else // added for ticket #49
 			{
 				qs.removeSelectList(selectList[i]);
-				qs.addSelectList(selectList[i]);				
-			} 
+				qs.addSelectList(selectList[i]);
+			}
 		}
-		DisplayMsg = true; 
+		DisplayMsg = true;
 	}
-	
+
 	public static QueryTokens.Column doConvertColumn(Hashtable tables, QueryTokens._Expression e)
 		throws IOException
 	{
 		QueryTokens.Column c = null;
-		
+
 		StreamTokenizer stream = createTokenizer(new StringReader(e.toString()));
 		for(ArrayList al = new ArrayList(); true;)
 		{
@@ -992,28 +965,28 @@ and
 			if(stream.ttype == StreamTokenizer.TT_EOF)
 			{
 				ListIterator li = al.listIterator();
-				
+
 				String ref = li.next().toString();
 				String alias = null;
-				
+
 				while(li.hasNext())
 				{
 					String next = li.next().toString();
-					
+
 					if(next.toString().equals(String.valueOf(SQLFormatter.DOT))
 					|| ref.endsWith(String.valueOf(SQLFormatter.DOT)))
 						ref = ref + next;
 					else
 						alias = next;
 				}
-				
+
 				ref = SQLFormatter.stripQuote(ref);
 				int dot = ref.lastIndexOf(SQLFormatter.DOT);
 				if(dot!=-1)
 				{
 					String owner = ref.substring(0,dot);
 					String cname = ref.substring(dot+1);
-					
+
 					// to do fix #80 for derived tables
 					if(tables.containsKey(owner))
 					{
@@ -1024,7 +997,7 @@ and
 						}
 						//else
 						//{
-							// to do 
+							// to do
 							// c = new QueryTokens.Column((DerivedTable)tables.get(owner),cname);
 							// if(alias!=null) c.setAlias(alias);
 							//Application.alert("!!! Column belongs to derived table: " + owner + "." + cname + " !!!");
@@ -1054,10 +1027,10 @@ and
 				al.add(stream.sval == null ? String.valueOf(SQLFormatter.DOT) : stream.sval);
 			}
 		}
-		
+
 		return c;
 	}
-	
+
 	private static boolean isOperator(String s)
 	{
 		return isOperatorSimbol(s)
@@ -1067,13 +1040,13 @@ and
 			|| s.equalsIgnoreCase("EXISTS") || s.equalsIgnoreCase("NOT EXISTS")
 			|| s.equalsIgnoreCase("BETWEEN") || s.equalsIgnoreCase("NOT BETWEEN");
 	}
-	
+
 	private static boolean isOperatorSimbol(String s)
 	{
-		return s.equals("<") || s.equals(">") || s.equals("=") || s.equals("<=") || s.equals("=>") || s.equals("<=") || s.equals(">=") 
+		return s.equals("<") || s.equals(">") || s.equals("=") || s.equals("<=") || s.equals("=>") || s.equals("<=") || s.equals(">=")
 			|| s.equals("<>")  || s.equals("!=");
 	}
-	
+
 	private static boolean isReservedWord(String s)
 	{
 		return isClauseWord(s) || isJoinWord(s) || s.equals(_ReservedWords.ON) || s.equals(_ReservedWords.AND) || s.equals(_ReservedWords.OR);
@@ -1086,7 +1059,7 @@ and
 			|| s.equalsIgnoreCase(_ReservedWords.JOIN) || s.equalsIgnoreCase(_ReservedWords.FULL_JOIN)
 			|| s.equalsIgnoreCase(_ReservedWords.LEFT_JOIN) || s.equalsIgnoreCase(_ReservedWords.RIGHT_JOIN);
 	}
-	
+
 	private static boolean isClauseWord(String s)
 	{
 		return s.equalsIgnoreCase(_ReservedWords.SELECT) || s.equalsIgnoreCase(_ReservedWords.FROM)
@@ -1094,26 +1067,20 @@ and
 			|| s.equalsIgnoreCase(_ReservedWords.HAVING) || s.equalsIgnoreCase(_ReservedWords.UNION)
 			|| s.equalsIgnoreCase(_ReservedWords.ORDER_BY) || s.equalsIgnoreCase(_ReservedWords.LIMIT);
 	}
-	
-	private static void doAdjustSequence(ArrayList al)
-	{
-		for(int i=0; i<al.size(); i++)
-		{
+
+	private static void doAdjustSequence(ArrayList<Object> al) {
+		for(int i = 0; i < al.size(); i++) {
 			if(al.get(i).toString().equalsIgnoreCase(_ReservedWords.SELECT)
 			|| al.get(i).toString().equalsIgnoreCase(_ReservedWords.FROM)
-			|| al.get(i).toString().equalsIgnoreCase(_ReservedWords.HAVING))
-			{
+			|| al.get(i).toString().equalsIgnoreCase(_ReservedWords.HAVING)) {
 				al.set(i, al.get(i).toString().toUpperCase());
 			}
-			else if(al.get(i).toString().equalsIgnoreCase("BY"))
-			{
+			else if(al.get(i).toString().equalsIgnoreCase("BY")) {
 				al.set(i-1, al.get(i-1).toString().toUpperCase() + SQLFormatter.SPACE + "BY");
 				al.remove(i--);
 			}
-			else if(al.get(i).toString().equalsIgnoreCase("JOIN"))
-			{
-				if (al.get(i-1).toString().equalsIgnoreCase("CROSS"))
-				{	
+			else if(al.get(i).toString().equalsIgnoreCase("JOIN")) {
+				if (al.get(i-1).toString().equalsIgnoreCase("CROSS")) {
 					al.set(i-1, ",");
 					al.remove(i--);
 				}
@@ -1121,7 +1088,7 @@ and
 					||al.get(i-1).toString().equalsIgnoreCase("LEFT")
 					||al.get(i-1).toString().equalsIgnoreCase("RIGHT")
 					||al.get(i-1).toString().equalsIgnoreCase("FULL"))
-				{	
+				{
 					al.set(i-1, al.get(i-1).toString().toUpperCase() + SQLFormatter.SPACE + "JOIN");
 					al.remove(i--);
 				}
@@ -1179,42 +1146,43 @@ and
 			}
 		}
 	}
-	
-	private static ArrayList doTokenize(Reader r)
-		throws IOException
-	{
-		ArrayList al = new ArrayList();
+
+	/**Parse token list, using java {@link StreamTokenizer}.
+	 * @param r
+	 * @return token list
+	 * @throws IOException
+	 */
+	private static ArrayList<Object> doTokenize(Reader r) throws IOException {
+		ArrayList<Object> al = new ArrayList<Object>();
 		StreamTokenizer stream = createTokenizer(r);
-		
-		while(stream.ttype != StreamTokenizer.TT_EOF)
-		{
+
+		while(stream.ttype != StreamTokenizer.TT_EOF) {
 			stream.nextToken();
-			if(stream.ttype == StreamTokenizer.TT_WORD)
-			{
+			if(stream.ttype == StreamTokenizer.TT_WORD) {
 				al.add(stream.sval);
 			}
-			else if(stream.ttype == StreamTokenizer.TT_NUMBER)
-			{
-				Double dval = new Double(stream.nval);
-				al.add(dval.doubleValue() == dval.intValue() ? new Integer((int)stream.nval) : (Number)dval);
+			else if(stream.ttype == StreamTokenizer.TT_NUMBER) {
+				// ody: [deprected] Double dval = new Double(stream.nval);
+				Double dval = Double.valueOf(stream.nval);
+				al.add(dval.doubleValue() == dval.intValue() ?
+						// new Integer((int)stream.nval) : (Number)dval);
+						Integer.valueOf((int)stream.nval) : (Number)dval);
 			}
-			else if(stream.ttype != StreamTokenizer.TT_EOF)
-			{
-				if(stream.sval == null)
-				{
-					al.add(new Character((char)stream.ttype));
+			else if(stream.ttype != StreamTokenizer.TT_EOF) {
+				if(stream.sval == null) {
+					// al.add(new Character((char)stream.ttype));
+					al.add(Character.valueOf((char)stream.ttype));
 				}
-				else
-				{
+				else {
 					al.add((char)stream.ttype + stream.sval + (char)stream.ttype);
 				}
 			}
 		}
-		
-		if(al.size() > 0 && !al.get(al.size()-1).toString().equals(";")) al.add(new Character(';'));
+
+		if(al.size() > 0 && !al.get(al.size()-1).toString().equals(";")) al.add(Character.valueOf(';'));
 		return al;
 	}
-	
+
 	private static StreamTokenizer createTokenizer(Reader r)
 	{
 
@@ -1226,23 +1194,23 @@ and
 		stream.wordChars('@','@'); // fix for ticket #226
 		stream.wordChars('_','_');
 
-	
+
 		if(!QueryBuilder.identifierQuoteString.equals("\""))
 		{
-			if ((int)QueryBuilder.identifierQuoteString.charAt(0) != 32)	
+			if ((int)QueryBuilder.identifierQuoteString.charAt(0) != 32)
 				// QuoteString=" " with SQLite ...
 				stream.quoteChar(QueryBuilder.identifierQuoteString.charAt(0));
-			
+
 //			for(int i=0; i<QueryBuilder.identifierQuoteString.length(); i++)
 //			{
 //				char wc = QueryBuilder.identifierQuoteString.charAt(i);
 //				stream.wordChars(wc,wc);
 //			}
 		}
-		
+
 		stream.slashSlashComments(true);
 		stream.slashStarComments(true);
-		
+
 		return stream;
 	}
 
@@ -1256,7 +1224,7 @@ and
 	{
 		for(int i=0; i<o.length; i++)
 			System.out.println(o[i].getClass().getName() + "[ " + o[i].toString() + " ]");
-		
+
 		System.out.println("----------------------------------------------------------------------");
 	}
  */
@@ -1281,22 +1249,21 @@ and
 		final int y = Integer.valueOf(str[2]);
 		extra.setLocation(new Point(x,y));
 		extra.setPack(Boolean.valueOf(str[3]).booleanValue());
-		
-		final List<EntityExtra> extras; 
+
+		final List<EntityExtra> extras;
 		if(extrasMap.containsKey(qs)){
 			extras = (List<EntityExtra>)extrasMap.get(qs);
-		}else{	
+		}else{
 			extras = new ArrayList<EntityExtra>();
 			extrasMap.put(qs,extras);
 		}
 		extras.add(extra);
-		
 	}
-	
+
 //	public static void main(String[] args)
 //	{
 //		QueryBuilder.useAlwaysQuote = false;
-//		
+//
 //		try
 //		{
 //			String fname = "E:/SQLeonardo/tmp/test.sql";
@@ -1304,7 +1271,7 @@ and
 //			QueryBuilder.identifierQuoteString = new String("`");
 //			String sql = "SELECT `nome tabella`.`primo campo`, `nome tabella`.`secondo campo` FROM `nome tabella` WHERE `nome tabella`.`primo campo` BETWEEN 1 AND 10";
 //			String sql = "SELECT \"nome tabella\".\"primo campo\", \"nome tabella\".\"secondo campo\" FROM \"nome tabella\"";
-//			String sql = "SELECT aa.idSoggetto AS aa_idSoggetto,bb.idCliente,bb.cCognome,bb.cNome FROM aa aa INNER JOIN bb bb ON aa.idSoggetto = bb.idSoggetto WHERE (aa.cPartitaIva = '' OR aa.cPartitaIva IS null) AND (aa.cCodiceFiscale = '' OR aa.cCodiceFiscale IS null) AND bb.idCliente NOT IN (select idcliente from cc)";		
+//			String sql = "SELECT aa.idSoggetto AS aa_idSoggetto,bb.idCliente,bb.cCognome,bb.cNome FROM aa aa INNER JOIN bb bb ON aa.idSoggetto = bb.idSoggetto WHERE (aa.cPartitaIva = '' OR aa.cPartitaIva IS null) AND (aa.cCodiceFiscale = '' OR aa.cCodiceFiscale IS null) AND bb.idCliente NOT IN (select idcliente from cc)";
 //			QueryModel qm = toQueryModel(sql);
 //			System.out.println(qm.toString(true));
 //		}
